--- a/1/index.html
+++ b/1/index.html
@@ -10,8 +10,29 @@ Tip: Investigar el evento window.onload
   <head>
     <meta charset="utf-8">
     <title></title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
   </head>
   <body>
+<img src="https://picsum.photos/400/400?image=0">
+<img src="https://picsum.photos/400/400?image=1">
+<img src="https://picsum.photos/400/400?image=2">
+<img src="https://picsum.photos/400/400?image=3">
+<img src="https://picsum.photos/400/400?image=4">
+<img src="https://picsum.photos/400/400?image=5">
+<img src="https://picsum.photos/400/400?image=6">
+<img src="https://picsum.photos/400/400?image=7">
+<img src="https://picsum.photos/400/400?image=8">
+<img src="https://picsum.photos/400/400?image=9">
+<img src="https://picsum.photos/400/400?image=10">
+<img src="https://picsum.photos/400/400?image=11">
 
+<script>
+//   $(window).load(function() {
+//       alert("window load occurred!");
+// });
+$( window ).on( "load", function() {
+          alert("window load occurred!");
+})
+</script>
   </body>
 </html>
